# algodts-cuda

./: CMakeLists.txt  main.cpp
src/: cuda_kernel.cu
